--- a/school_app-master/vercel.json
+++ b/school_app-master/vercel.json
@@ -1,9 +1,5 @@
 {
-  "redirects": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html",
-      "statusCode": 200
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
